--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@ nav li>a:link, nav li>a:visited{
 nav li>a:hover, nav li>a:active{
     color: #065666;
 }
+#openMenu, #closeMenu{
+    font-size: 3rem;
+    display: none;
+}
 
 /* HERO SECTION STYLING */
 #heroText{
